<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="96dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:context="pt.isec.filipe.sandra.patricia.MainActivity">

        <TextView
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:text="@string/colaborador" />

        <TextView
            android:id="@+id/tvFilipe"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:text="@string/Filipe_Acurcio" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:text="@string/colaborador" />


        <TextView
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:text="@string/sandra_perdigao" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:text="@string/colaborador" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:text="@string/patricia_goncalves" />


    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/creditos"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:background="@drawable/back"
        android:gravity="center"
        android:text="@string/amov_2022"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
