<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.isec.filipe.sandra.patricia.MenuJogoActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="252dp"
        android:layout_height="64dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="96dp"
        android:fontFamily="serif"
        android:text="@string/math_quiz"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSinglePlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSinglePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="159dp"
        android:fontFamily="serif"
        android:text="@string/modo_1_jogador"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMultiPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="159dp"
        android:fontFamily="serif"
        android:text="@string/modo_multiplayer"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSairMenuJogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/sair"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiPlayer" />


</androidx.constraintlayout.widget.ConstraintLayout>